# Evolution-of-Todo-Project

./: README.md
Phase-I/: CLAUDE.md  README.md
Phase-I/specs/: architecture.md  overview.md
Phase-I/src/: __init__.py  main.py
Phase-II/: .env.example  .gitignore  CLAUDE.md  README.md  UPGRADE_SUMMARY.md  docker-compose.yml
Phase-II/backend/: .env.example  .env.production  .gitignore  DEPLOY_TO_HF.md  Dockerfile  PHASE1_PHASE2_CHECKPOINT.md  phase_ii_app.db  pyproject.toml  requirements.txt
Phase-II/backend/alembic/: env.py
Phase-II/backend/alembic/versions/: 001_remove_priority_and_tags.py  002_create_tasks_table.py
Phase-II/backend/app/: config.py  main.py
Phase-II/backend/app/api/: deps.py
Phase-II/backend/app/models/: task.py  user.py
Phase-II/backend/app/services/: jwt_service.py
Phase-II/backend/docs/: API.md
Phase-II/backend/src/: config.py  database.py  main.py
Phase-II/backend/src/api/: auth.py  errors.py  schemas.py  tasks.py
Phase-II/backend/src/core/: security.py
Phase-II/backend/src/database/: connection.py
Phase-II/backend/src/models/: __init__.py  base.py  task.py  user.py
Phase-II/backend/src/services/: task_service.py
Phase-II/backend/tests/: conftest.py
Phase-II/backend/tests/contract/: test_api_contract.py  test_get_task.py
Phase-II/backend/tests/integration/: test_complete_task.py  test_delete_task.py
Phase-II/backend/tests/unit/: __init__.py  test_jwt_service.py
Phase-II/docs/: BACKEND_CLEANUP_STATUS.md  FIXED_DATABASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  NEON_DATABASE_SETUP.md  PHASE2_COMPONENTS_COMPLETE.md  PHASE2_UI_ENHANCEMENTS_SUMMARY.md  PHASE3_IMPLEMENTATION_REPORT.md  PHASE6_EXECUTION_REPORT.md  PHASES_10-13_COMPLETION_REPORT.md  UI_ENHANCEMENTS_FINAL_REPORT.md
Phase-II/frontend/: .env.example  .env.local.example  CLAUDE.md  Dockerfile  QUICKSTART.md  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
Phase-III/: .gitignore  ARCHITECTURE_CHECKLIST.md  ARCHITECTURE_INDEX.md  CHATKIT_DELIVERABLES_INDEX.md  CHATKIT_DELIVERY_SUMMARY.md  CLAUDE.md  EMPTY_STATE_GUIDE.md  ERROR_HANDLING_GUIDE.md  HANDOFF_DOCUMENT.md  IMPLEMENTATION_DELIVERABLES.txt  IMPLEMENTATION_SUMMARY_T328-T345.md  LIST_TASKS_FIX.md  MCP_QUICK_START.md  MCP_SERVER_IMPLEMENTATION_SUMMARY.md  PHASE-8-COMPLETION-REPORT.md  PHASE_III_DATABASE_SCHEMA_COMPLETE.md  PHASE_III_FINAL_STATUS.md  QUICK_REPLIES_GUIDE.md  QUICK_REPLIES_IMPLEMENTATION.md  README.md  TASK_ID_IMPLEMENTATION.md  run_backend.bat  run_backend.sh  run_final_tests.sh
Phase-III/.claude/: settings.local.json
Phase-III/.spec-kit/: config.yaml
Phase-III/backend/: .dockerignore  .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOY_TO_HF.md  Dockerfile  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
Phase-III/docs/: AGENTS_QUICK_START.md  AGENTS_SDK_INTEGRATION.md  CHATKIT_FRONTEND_IMPLEMENTATION_REPORT.md  CHAT_API.md  CHAT_IMPLEMENTATION_GUIDE.md  CODE_CHANGES_REFERENCE.md  CREATED_FILES_MANIFEST.txt  DATABASE_SCHEMA.md  EXECUTION_REPORT.txt  FINAL_INTEGRATION_TEST_SUMMARY.md  FINAL_VERIFICATION_REPORT.txt  FRONTEND_PHASE1_COMPLETE.md  FRONTEND_SETUP_INVENTORY.md  FSM_CONVERSATION_STATE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY_PHASES_4-8.md  PHASE2_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION_FINAL.md  PHASE2_UI_CODE_REFERENCES.md  PHASE4-8_IMPLEMENTATION_COMPLETE.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_VERIFICATION_CHECKLIST.md  (+8 more)
(+506 files in other folders)
